--- a/examples/features/unmanaged/ptl/PTL-Demo.ipynb
+++ b/examples/features/unmanaged/ptl/PTL-Demo.ipynb
@@ -77,7 +77,7 @@
     "from determined.experimental import core_v2\n",
     "from determined.lightning.experimental import DetLogger\n",
     "\n",
-    "det_logger = DetLogger(unmanaged_config=core_v2.UnmanagedConfig(name=\"ptl-demo\"))\n",
+    "det_logger = DetLogger(defaults=core_v2.DefaultConfig(name=\"ptl-demo\"))\n",
     "trainer = pl.Trainer(limit_train_batches=100, max_epochs=1, logger=det_logger)\n",
     "trainer.fit(model=autoencoder, train_dataloaders=train_loader)"
    ]
